# code-review-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
skill/: SKILL.md
src/code_review_mcp/: __init__.py  server.py
