[project]
name = "code-review-mcp"
version = "0.1.0"
description = "MCP 服务器，为 AI 编码助手提供本地代码质量审查工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AlanNiew", email = "728097735@qq.com" },
]
keywords = ["mcp", "code-review", "code-quality", "ai", "coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.9.0",
]

[project.scripts]
code-review-mcp = "code_review_mcp.server:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/AlanNiew/code-review-mcp"
Repository = "https://github.com/AlanNiew/code-review-mcp"
Issues = "https://github.com/AlanNiew/code-review-mcp/issues"
